fixed social media icons on mobile view

--- a/custom.css
+++ b/custom.css
@@ -74,13 +74,6 @@ footer {
 }
 
 
-.footercontainer {
-  width: 800px;
-  margin: 0 auto;
-}
-
-
-
 
 
 .socialmedia {
@@ -94,6 +87,11 @@ footer {
     width:25px;
     height:22px:
   }}}
+
+footer.img {
+    width:25px;
+    height:22px:
+  }
 
 
 body, html {
