--- a/style.css
+++ b/style.css
@@ -697,8 +697,8 @@ section#tryit label{color:#edeff0}
 footer{background-color:white; top left repeat-x;padding-bottom:60px;border-top:1px solid #000;float:left}
 footer header{padding:13px 0px;height:30px;background:none;position:relative;margin-top:0px}
 footer header img{float:left}
-@media (max-width: 480px){footer header img{width:146px;margin-top:4px}
-}
+/*@media (max-width: 480px){footer header img{width:146px;margin-top:4px}
+}*/
 footer header ul{list-style:none;margin:0px;width:auto;float:right}
 footer header ul li{list-style-image:none;list-style-type:none;margin-left:0}
 footer header ul li{display:inline-block;margin-left:15px}
